5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1789_1593.log
== TEST (2019-05-29 18:13:59) 
-- CODE:
from numpy import*
notas(array(eval("notas")))
a=(sum(notas)/size(notas))
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:14:08) 
-- CODE:
from numpy import*
notas=(array(eval("notas")))
a=(sum(notas)/size(notas))
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:14:24) 
-- CODE:
from numpy import*
notas=(array(eval("notas: ")))
a=(sum(notas)/size(notas))
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:14:41) 
-- CODE:
from numpy import*
notas=(array(eval(input("notas: ")))
a=(sum(notas)/size(notas))
print(round(a, 2))
-- ERROR:
File "XXXX", line 3
    a=(sum(notas)/size(notas))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:08) 
-- CODE:
from numpy import*
notas=(array(eval(input("notas: ")))
a=(sum notas/size(notas))
-- ERROR:
File "XXXX", line 3
    a=(sum notas/size(notas))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:59) 
-- CODE:
from numpy import*
notas=(array(eval(input("notas: ")))
a=(sum (notas) / size (notas) )
-- ERROR:
File "XXXX", line 3
    a=(sum (notas) / size (notas) )
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:58) 
-- CODE:
from numpy import*
notas = (array (eval (input ("notas: ")))
a = ( sum (notas))
-- ERROR:
File "XXXX", line 3
    a = ( sum (notas))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:13) 
-- CODE:
from numpy import*
notas = (array (eval (input ("notas: ")))
a = ( sum (notas))
print(a)
-- ERROR:
File "XXXX", line 3
    a = ( sum (notas))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:36) 
-- CODE:
from numpy import*
notas = (array (eval (input ("notas: ")))
a = (sum[notas])
print(a)
-- ERROR:
File "XXXX", line 3
    a = (sum[notas])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:10) 
-- CODE:
from numpy import*
notas = (array (eval (input ("notas: ")))
a = (size(notas))
			
print(a)
-- ERROR:
File "XXXX", line 3
    a = (size(notas))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:21) 
-- CODE:
from numpy import*
notas = (array (eval (input ("notas: ")))
print(size(notas))

-- ERROR:
File "XXXX", line 3
    print(size(notas))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:29) 
-- CODE:
from numpy import*
notas = (array (eval (input ("notas: ")))


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:34) 
-- CODE:
from numpy import*
notas = (array (eval (input ("notas: ")))
-- ERROR:
File "XXXX", line 3
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:38) 
-- CODE:
from numpy import*
notas = (array (eval (input ("notas: ")))
-- ERROR:
File "XXXX", line 3
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:26) 
-- CODE:
from numpy import*
notas = ( array ( eval ( input ("notas: ")))
print(size(notas))
-- ERROR:
File "XXXX", line 3
    print(size(notas))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:43) 
-- CODE:
from numpy import*
notas =array ( eval ( input ("notas: "))
print(size(notas))
-- ERROR:
File "XXXX", line 3
    print(size(notas))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:34) 
-- CODE:
from numpy import*
notas =input ("notas: ")
print((notas)
-- ERROR:
File "XXXX", line 4
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:57) 
-- CODE:
from numpy import*
notas =int(input ("notas: "))
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:14) 
-- CODE:
from numpy import*
notas =int(input ("notas: "))
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:27) 
-- CODE:
from numpy import*
notas =array(input ("notas: "))
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:45) 
-- CODE:
from numpy import*
notas =array(input ("notas: "))
print(size(notas)
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:55) 
-- CODE:
from numpy import*
notas =array(input ("notas: "))
print(size(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:12) 
-- CODE:
from numpy import*
notas =array(input ("notas: "))
print(sum(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:25) 
-- CODE:
from numpy import*
notas =array(input ("notas: "))
print(sum(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:08) 
-- CODE:
from numpy import*
notas = array(input ("notas: "))
print( sum ( notas ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:44) 
-- CODE:
from numpy import*
notas = array(eval(input ("notas: ")))
print( sum ( notas ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:27:13) 
-- CODE:
from numpy import*
notas = array(eval(input ("notas: ")))
print( sum ( notas ) / size (notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:27:46) 
-- CODE:
from numpy import*
notas = array(eval(input ("notas: ")))
print(round( sum ( notas ) / size (notas), 2)
-- ERROR:
File "XXXX", line 4
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:11) 
-- CODE:
from numpy import*
notas = array(eval(input ("notas: ")))
print(round( sum ( notas ) / size (notas), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:05) 
-- CODE:
from numpy import*
notas = array(eval(input ("notas: ")))
a = ( sum ( notas ) / size (notas))
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:22) 
-- CODE:
from numpy import*
notas = array(eval(input ("notas: ")))
a = ( sum ( notas ) / size (notas))
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:35) 
-- CODE:
from numpy import*
notas = array(eval(input ("notas: ")))
a = ( sum ( notas ) / size (notas))
b = (notas[0])
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:21) 
-- CODE:
from numpy import*
notas = array(eval(input ("notas: ")))
a = ( sum ( notas ) / size (notas))
b = (notas[0]*1)
c = print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:34:39) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
a = ( sum ( notas ) * nota [0] *2
b = (notas[0]*1)
c = print(a)
-- ERROR:
File "XXXX", line 5
    b = (notas[0]*1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:34:47) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
a = ( sum ( notas ) * nota [0] *2
c = print(a)
-- ERROR:
File "XXXX", line 5
    c = print(a)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:37:52) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
a = ( sum ( notas )  / size (notas))
c = print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:38:03) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
a = ( sum ( notas )  / size (notas))
c = print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:08) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
while(peso<0):
	p=peso+1
	a = ( sum ( notas )  / size (notas))
c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:24) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
a = (sum ( notas ) / size (notas))
while(peso<0):
	p=peso+1
	a = ( sum ( notas )  / size (notas))
c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:29) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
a = (sum ( notas ) / size (notas))
while(peso<0):
	p=peso+1
	a = ( sum ( notas )  / size (notas))
c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:45:03) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
while(peso<0):
	peso=peso+1
	a = ( sum ( notas )  / size (notas))
c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:45:17) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
while(peso<0):
	peso=peso+1
	a = ( sum ( notas )  / size (notas))
	c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:46:25) 
-- CODE:
from numpy import*
peso = 1 
while(peso<0):
	peso=peso+1
	notas = array(eval(input("notas: ")))
	a = ( sum ( notas )  / size (notas))
	c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:01:56) 
-- CODE:
from numpy import*
peso = 1 
cont = 0
notas = array(eval(input ("notas: ")))
while(peso<0):
	peso=peso+1
	a = array(eval)input("pesos: ")
c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
File "XXXX", line 7
    a = array(eval)input()
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:11) 
-- CODE:
from numpy import*
peso = 1 
cont = 0
notas = array(eval(input ("notas: ")))
while(peso<0):
	peso=peso+1
	a = array(eval(input("pesos: "))
c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
File "XXXX", line 8
    c = print(a)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:19) 
-- CODE:
from numpy import*
peso = 1 
cont = 0
notas = array(eval(input ("notas: ")))
while(peso<0):
	peso=peso+1
	a = array(eval(input("pesos: "))
	c = print(a)
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
File "XXXX", line 8
    c = print(a)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:32) 
-- CODE:
from numpy import*
peso = 1 
cont = 0
notas = array(eval(input ("notas: ")))
while(peso<0):
	peso=peso+1
	a = array(eval(input("pesos: "))
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
File "XXXX", line 9
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:59) 
-- CODE:
from numpy import*
peso = 1 
cont = 0
notas = array(eval(input ("notas: ")))
while(peso<0):
	peso=peso+1
	cont=cont+1
	a = array(eval(input("pesos: "))
#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
File "XXXX", line 10
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:06:36) 
-- CODE:
from numpy import*
peso = 1 
notas = array(eval(input ("notas: ")))
med = sum(notas) / size(notas)
print(med)

#b = (notas[0] * 1) + notas [1] * 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
